crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__this__this_at_top_level.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/this/this_at_top_level.lox
---
success: false
exit_code: 65
----- stdout -----

----- stderr -----
Error: Can’t use `this` outside of class.
   ╭─[craftinginterpreters/test/this/this_at_top_level.lox:1:1]
   │
 1 │ this; // Error at 'this': Can't use 'this' outside of a class.
   │ ────  
   │        
───╯
